test/shouldPass/multipleVar.pas
program Sample;
var
  i, b, c, d : integer;
  a, x :  string;

begin
  while (i < 10) do
    i := i + 1;

  writeln(i);
end.
