test/shouldFail/initMultipleVar.pas
program Sample;
var
  i, b, c, d : integer = 0;
// ^^^^^^^^^^^^^^^^^^^^^^^
// Can not initialize multiple variables at once

begin
  writeln(i);
end.
